fix: removed x-overflow: hidden on html tag

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,10 +16,6 @@ body {
   -webkit-overflow-scrolling: touch;
 }
 
-html {
-  overflow-x: hidden;
-}
-
 html,
 body {
   height: auto !important;
